# yllama

./: Cargo.toml  LICENSE  PRD.md  README.md  claude.md
src/: config.rs  deps.rs  llamacpp.rs  main.rs  manifest.rs  opencode_config.rs  vibe_config.rs
src/commands/: attach.rs  claude_code.rs  install.rs  litellm.rs  mod.rs  opencode.rs  pi.rs  select_model.rs  serve.rs  stop.rs  sync.rs  vibe.rs
src/commands/models/: add.rs  delete.rs  download.rs  hf_search.rs  list.rs  mod.rs
tests/: integration_test.rs
