[package]
name = "yllama"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yllama"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
dialoguer = "0.11"
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
dirs = "5"
anyhow = "1"
futures-util = "0.3"
libc = "0.2"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
